# lab0_ament_copyright

./: README.md  package.xml  setup.py
lab0_ament_copyright/: copyright_names.py  licenses.py
lab0_ament_copyright/template/: lab0_proprietary_contributing.txt
