<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>lab0_ament_copyright</name>
  <version>0.0.1</version>
  <description>
    Check Lab0-specific copyright headers.
  </description>
  <maintainer email="tyler@picknik.ai">Tyler Weaver</maintainer>
  <license>BSD</license>

  <exec_depend>ament_copyright</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
